# pollytest

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  build.sh  clean.sh  config.build.example  deps.sh  idl.sh  ubuntu_setup.sh
cmake/modules/: FindJSON11.cmake
djinni/: djinni_cmake.djinni
src/: CMakeLists.txt  api.cpp
